Skip writing cache if running from a pull request

--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,10 @@ inputs:
   lookup-only:
     description: 'Check if a cache entry exists for the given input(s) (key, restore-keys) without downloading the cache'
     default: 'false'
+  skip-cache-write:
+    description: 'if true, skip writing a cache entry'
     required: false
+
 outputs:
   cache-hit:
     description: 'A boolean value to indicate an exact match was found for the primary key'
